fixtures/cs-hash-01/good/hash-code-ui.ts
export function hashCode(value: string) {
	return value.length;
}
